--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "next": "9.5.3",
+    "next-images": "^1.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^1.1.1"
   }
 }
