--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "next": "9.5.3",
     "next-images": "^1.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.1"
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-styled-components": "^1.11.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
