--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^2.8.0",
     "next": "9.5.3",
     "next-images": "^1.6.0",
     "react": "16.13.1",
