--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^2.8.0",
-    "next": "9.5.3",
+    "next": "^10.1.3",
     "next-images": "^1.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
