--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next-images": "^1.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "three": "^0.128.0",
+    "vanta": "^0.5.21"
   },
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^1.1.1",
