--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "framer-motion": "^2.8.0",
-    "next": "^10.1.3",
+    "next": "^10.2.3",
     "next-images": "^1.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.2.0",
     "three": "^0.128.0",
-    "vanta": "^0.5.21"
+    "vanta": "^0.5.21",
+    "windups": "^1.1.9"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.11.1"
   },
   "resolutions": {
